--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Sheboyan Physicians Group</title>
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/main.css">
@@ -18,7 +17,7 @@
                 </div> 
         </div>
         <nav id="navbar-area" class="nav pl-5">
-           <div class="link"><a href="#services">Services</a></div>
+           <div class="link"><a href="#services">Services 💩 </a></div>
            <div class="link"><a href="#payments">Payments</a></div>
            <div class="link"><a href="#associations">Associations</a></div>
            <div class="link"><a href="#testimonials">Testimonials</a></div>
@@ -33,7 +32,7 @@
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner">
                               <div class="carousel-item active">
-                                <img src="./media/nightlife.jpeg" class="d-block w-100" alt="...">
+                                <img src="http://lorempixel.com/1000/300/nature" class="d-block w-100" alt="...">
                               </div>
                               <div class="carousel-item">
                                 <img src="http://lorempixel.com/1000/300/technics" class="d-block w-100" alt="...">
