--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
 </head>
 <body>
     <header>
-        <div id="logo-area"><img src="./media/placeholder.com-logo3.jpg" alt="Logo"></div>
-        <div id="header-contact-area">
-                <div class="nav pl-5">
-                       <a href="#" id="telephone" class="nav-link"><i class="fas fa-phone-alt"></i><span> + 1 123 456 7890</span></a>
-                       <a href="#" class="nav-link"><i class="fas fa-map-marker-alt"></i><span> 123 Any Street, East Leftovershoe, MI</span></a>
-                </div> 
+        <div id="logo-area"><img src="./css/media/placeholder.com-logo3.jpg" alt="Logo"></div>
+        <div id="menus">
+                <div id="header-contact-area">
+                        <div class="nav pl-5">
+                               <a href="#" id="telephone" class="nav-link"><i class="fas fa-phone-alt"></i><span> + 1 123 456 7890</span></a>
+                               <a href="#" class="nav-link"><i class="fas fa-map-marker-alt"></i><span> 123 Any Street, East Leftovershoe, MI</span></a>
+                        </div> 
+                </div>
         </div>
+   
         <nav id="navbar-area" class="nav pl-5">
-           <div class="link"><a href="#services">Services 💩 </a></div>
+           <div class="link"><a href="#services">Services</a></div>
            <div class="link"><a href="#payments">Payments</a></div>
            <div class="link"><a href="#associations">Associations</a></div>
            <div class="link"><a href="#testimonials">Testimonials</a></div>
@@ -32,14 +35,36 @@
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner">
                               <div class="carousel-item active">
-                                <img src="http://lorempixel.com/1000/300/nature" class="d-block w-100" alt="...">
+                                    <div class="card bg-dark text-white">
+                                            <img src="https://placehold.it/1000x300/333333" class="card-img" alt="...">
+                                            <div class="card-img-overlay">
+                                              <h2 class="display-4 card-title text-white">Aute ea esse aliquip aliqua incididunt consequat.</h2>
+                                              <p class="card-text">Duis sunt quis culpa aliquip eu qui ut excepteur nisi in officia enim. Consequat veniam eu minim laborum excepteur occaecat aute reprehenderit proident anim aliquip dolore eiusmod tempor.</p>
+                                              <p class="card-text"><a href="#" class="btn btn-primary btn-lg">Link 1</a></p>
+                                            </div>
+                                    </div>
                               </div>
                               <div class="carousel-item">
-                                <img src="http://lorempixel.com/1000/300/technics" class="d-block w-100" alt="...">
+                                            <div class="card bg-dark text-white">
+                                                    <img src="https://placehold.it/1000x300/666666" class="card-img" alt="...">
+                                                    <div class="card-img-overlay align-middle">
+                                                      <h2 class="display-4 card-title text-white">Officia esse excepteur enim id Lorem do eiusmod et.</h2>
+                                                      <p class="card-text">Adipisicing fugiat anim non occaecat do pariatur non consectetur laboris exercitation aliqua. Aute sint ut ex duis proident.</p>
+                                                      <p class="card-text"><a href="#" class="btn btn-primary btn-lg">Link 2</a></p>
+                                                    </div>
+                                            </div>
                               </div>
                               <div class="carousel-item">
-                                <img src="http://lorempixel.com/1000/300/nightlife" class="d-block w-100" alt="...">
-                              </div>
+                                    <div class="card bg-dark text-white">
+                                            <img src="https://placehold.it/1000x300/000000" class="card-img" alt="...">
+                                            <div class="card-img-overlay">
+                                              <h5 class="display-4 card-title text-white">Ut amet Lorem aliquip tempor.</h5>
+                                              <p class="card-text">Aliquip fugiat mollit reprehenderit excepteur ullamco. Lorem exercitation proident Lorem enim officia quis sit exercitation. Id elit cillum quis qui tempor qui adipisicing sit cupidatat labore consectetur cillum exercitation. Velit non nulla incididunt adipisicing et cillum id. Nulla Lorem anim culpa ut minim sit proident magna excepteur eiusmod consequat id. Lorem ut Lorem ex laboris sunt quis tempor aliquip voluptate.</p>
+                                              <p class="card-text"><a href="#" class="btn btn-primary btn-lg">Link 3</a></p>
+                                            </div>
+                                    </div>
+                        <!-- <img src="http://lorempixel.com/1000/300/technics" class="d-block w-100" alt="..."> -->
+                      </div>
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -53,7 +78,7 @@
             
             </div>
         </div>
-        <div id="services" class="row">
+        <div id="services" class="row mb-5">
             <div class="col-md text-center">
                 <div class="icon">
                     <i class="fa fa-address-book" aria-hidden="true"></i>
@@ -85,6 +110,14 @@
                 <h2>Text 4</h2>
                 <p>Labore adipisicing tempor occaecat cillum nulla aute duis cillum est ullamco.</p>
 
+            </div>
+        </div>
+        <div id="payments" class="row">
+           <div class="col-md-6"></div>
+           <div class="col-md-6 align-middle p-5">
+               <h4 class="display-4 text-white pb-4">Fugiat sunt Lorem elit consequat in velit pariatur commodo ea qui ad.</h4>
+               <h5 class="display-5 text-white pb-4">John X. Doe</h5>
+               <p class="display-5 text-white"><a href="#" class="btn btn-primary btn-lg">Another Link</a></p>
             </div>
         </div>
         
