begin responsive menu

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <header>
+        <div id="collapse-menu">
+                <i class="fas fa-bars"></i>
+        </div>
         <div id="logo-area"><img src="./css/media/placeholder.com-logo3.jpg" alt="Logo"></div>
         <div id="menus">
                 <div id="header-contact-area">
@@ -17,8 +20,7 @@
                                <a href="#" class="nav-link"><i class="fas fa-map-marker-alt"></i><span> 123 Any Street, East Leftovershoe, MI</span></a>
                         </div> 
                 </div>
-        </div>
-   
+       
         <nav id="navbar-area" class="nav pl-5">
            <div class="link"><a href="#services">Services</a></div>
            <div class="link"><a href="#payments">Payments</a></div>
@@ -28,6 +30,8 @@
            <div class="link"><a href="#physicians">Physicians</a></div>
 
         </nav>
+    </div>
+   
     </header>
     <div class="container-fluid">
         <div id="welcome" class="row">
@@ -36,7 +40,7 @@
                             <div class="carousel-inner">
                               <div class="carousel-item active">
                                     <div class="card bg-dark text-white">
-                                            <img src="https://placehold.it/1000x500/333333" class="card-img" alt="...">
+                                            <img src="https://placehold.it/1000x400/333333" class="card-img" alt="...">
                                             <div class="card-img-overlay">
                                               <h2 class="display-4 card-title text-white">Aute ea esse aliquip aliqua incididunt consequat.</h2>
                                               <p class="card-text">Duis sunt quis culpa aliquip eu qui ut excepteur nisi in officia enim. Consequat veniam eu minim laborum excepteur occaecat aute reprehenderit proident anim aliquip dolore eiusmod tempor.</p>
@@ -46,7 +50,7 @@
                               </div>
                               <div class="carousel-item">
                                             <div class="card bg-dark text-white">
-                                                    <img src="https://placehold.it/1000x500/666666" class="card-img" alt="...">
+                                                    <img src="https://placehold.it/1000x400/666666" class="card-img" alt="...">
                                                     <div class="card-img-overlay align-middle">
                                                       <h2 class="display-4 card-title text-white">Officia esse excepteur enim id Lorem do eiusmod et.</h2>
                                                       <p class="card-text">Adipisicing fugiat anim non occaecat do pariatur non consectetur laboris exercitation aliqua. Aute sint ut ex duis proident.</p>
@@ -56,7 +60,7 @@
                               </div>
                               <div class="carousel-item">
                                     <div class="card bg-dark text-white">
-                                            <img src="https://placehold.it/1000x500/000000" class="card-img" alt="...">
+                                            <img src="https://placehold.it/1000x400/000000" class="card-img" alt="...">
                                             <div class="card-img-overlay">
                                               <h5 class="display-4 card-title text-white">Ut amet Lorem aliquip tempor.</h5>
                                               <p class="card-text">Aliquip fugiat mollit reprehenderit excepteur ullamco. Lorem exercitation proident Lorem enim officia quis sit exercitation. Id elit cillum quis qui tempor qui adipisicing sit cupidatat labore consectetur cillum exercitation. Velit non nulla incididunt adipisicing et cillum id. Nulla Lorem anim culpa ut minim sit proident magna excepteur eiusmod consequat id. Lorem ut Lorem ex laboris sunt quis tempor aliquip voluptate.</p>
@@ -130,5 +134,6 @@
     <script src="./node_modules/jquery/dist/jquery.slim.js"></script>
     <script src="./node_modules/popper.js/dist/popper.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
