--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
         <div id="collapse-menu">
                 <i class="fas fa-bars"></i>
         </div>
-        <div id="logo-area"><img src="./css/media/placeholder.com-logo3.jpg" alt="Logo"></div>
+        <div id="logo-area">
+            <a href="#">
+                <img src="./css/media/placeholder.com-logo3.jpg" alt="Logo"></div>
+            </a>
         <div id="menus">
                 <div id="header-contact-area">
-                        <div class="nav pl-5">
+                        <div class="nav">
                                <a href="#" id="telephone" class="nav-link"><i class="fas fa-phone-alt"></i><span> + 1 123 456 7890</span></a>
                                <a href="#" class="nav-link"><i class="fas fa-map-marker-alt"></i><span> 123 Any Street, East Leftovershoe, MI</span></a>
                         </div> 
                 </div>
        
-        <nav id="navbar-area" class="nav pl-5">
+        <nav id="navbar-area" class="nav">
            <div class="link"><a href="#services">Services</a></div>
            <div class="link"><a href="#payments">Payments</a></div>
            <div class="link"><a href="#associations">Associations</a></div>
@@ -39,7 +42,7 @@
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner">
                               <div class="carousel-item active">
-                                    <div class="card bg-dark text-white">
+                                    <div class="card bg-dark text-white align-middle">
                                             <img src="https://placehold.it/1000x400/333333" class="card-img" alt="...">
                                             <div class="card-img-overlay">
                                               <h2 class="display-4 card-title text-white">Aute ea esse aliquip aliqua incididunt consequat.</h2>
@@ -63,7 +66,7 @@
                                             <img src="https://placehold.it/1000x400/000000" class="card-img" alt="...">
                                             <div class="card-img-overlay">
                                               <h5 class="display-4 card-title text-white">Ut amet Lorem aliquip tempor.</h5>
-                                              <p class="card-text">Aliquip fugiat mollit reprehenderit excepteur ullamco. Lorem exercitation proident Lorem enim officia quis sit exercitation. Id elit cillum quis qui tempor qui adipisicing sit cupidatat labore consectetur cillum exercitation. Velit non nulla incididunt adipisicing et cillum id. Nulla Lorem anim culpa ut minim sit proident magna excepteur eiusmod consequat id. Lorem ut Lorem ex laboris sunt quis tempor aliquip voluptate.</p>
+                                              <p class="card-text">Aliquip fugiat mollit reprehenderit excepteur ullamco. Lorem exercitation proident Lorem enim officia quis sit exercitation.</p>
                                               <p class="card-text"><a href="#" class="btn btn-primary btn-lg">Link 3</a></p>
                                             </div>
                                     </div>
@@ -119,7 +122,7 @@
         <div id="payments" class="row">
            <div class="col-md-6"></div>
            <div class="col-md-6 align-middle p-5">
-               <h4 class="display-4 text-white pb-4">Fugiat sunt Lorem elit consequat in velit pariatur commodo ea qui ad.</h4>
+               <h4 class="display-4 text-white pb-4 mr-6">Fugiat sunt Lorem elit consequat in velit pariatur commodo ea qui ad.</h4>
                <h5 class="display-5 text-white pb-4">John X. Doe</h5>
                <p class="display-5 text-white"><a href="#" class="btn btn-primary btn-lg">Another Link</a></p>
             </div>
@@ -132,7 +135,7 @@
     </div>
     <script src="https://kit.fontawesome.com/b4f9c2bf89.js"></script>
     <script src="./node_modules/jquery/dist/jquery.slim.js"></script>
-    <script src="./node_modules/popper.js/dist/popper.min.js"></script>
+    <!-- <script src="./node_modules/popper.js/dist/popper.min.js"></script> -->
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
