changes to package.json

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
            <div class="col-md-6"></div>
            <div class="col-md-6 align-middle p-5">
                <h4 class="display-4 text-white pb-4 mr-6">Fugiat sunt Lorem elit consequat in velit pariatur commodo ea qui ad.</h4>
-               <h5 class="display-5 text-white pb-4">John X. Doe</h5>
+               <h5 class="display-5 text-white pb-4"><span class="cta-gradient"></span>John X. Doe</h5>
                <p class="display-5 text-white"><a href="#" class="btn btn-primary btn-lg">Another Link</a></p>
             </div>
         </div>
