added owl carousel

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Sheboyan Physicians Group</title>
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
@@ -163,7 +165,8 @@
     </div>
     <script src="https://kit.fontawesome.com/b4f9c2bf89.js"></script>
     <script src="./node_modules/jquery/dist/jquery.slim.js"></script>
-    <!-- <script src="./node_modules/popper.js/dist/popper.min.js"></script> -->
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="./node_modules/popper.js/dist/popper.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
