--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                                 <div class="overlay">
                                     <div class="text">
                                         <h2>Name</h2>
-                                        <p class="font-weight-bold">Title</p>
+                                        <h5>Title</h5>
                                         <p><i class="fab fa-twitter"></i>&nbsp; <i class="fab fa-linkedin-in"></i>&nbsp; <i class="fab fa-instagram"></i></p>
                                     </div>
                                 </div>
@@ -299,7 +299,7 @@
                                 <div class="overlay">
                                         <div class="text">
                                             <h2>Name</h2>
-                                            <p class="font-weight-bold">Title</p>
+                                            <h5>Title</h5>
                                             <p><i class="fab fa-twitter"></i>&nbsp; <i class="fab fa-linkedin-in"></i>&nbsp; <i class="fab fa-instagram"></i></p>
                                         </div>
                                     </div>
@@ -309,7 +309,7 @@
                                 <div class="overlay">
                                         <div class="text">
                                                 <h2>Name</h2>
-                                                <p class="font-weight-bold">Title</p>
+                                                <h5>Title</h5>
                                                 <p><i class="fab fa-twitter"></i>&nbsp; <i class="fab fa-linkedin-in"></i>&nbsp; <i class="fab fa-instagram"></i></p>
                                          </div>
                                     </div>
@@ -319,7 +319,7 @@
                                 <div class="overlay">
                                         <div class="text">
                                             <h2>Name</h2>
-                                            <p class="font-weight-bold">Title</p>
+                                            <h5>Title</h5>
                                             <p><i class="fab fa-twitter"></i>&nbsp; <i class="fab fa-linkedin-in"></i>&nbsp; <i class="fab fa-instagram"></i></p>
                                         </div>
                                     </div>
@@ -328,7 +328,7 @@
                 </div>
             </section>    
             <footer class="row">
-                
+
             </footer>
     </div>
     <script src="https://kit.fontawesome.com/b4f9c2bf89.js"></script>
