--- a/index.html
+++ b/index.html
@@ -327,9 +327,70 @@
                     </div>
                 </div>
             </section>    
-            <footer class="row">
 
-            </footer>
+             <!-- Page Footer-->
+      <footer class="section footer-modern context-dark footer-modern-2">
+            <div class="footer-modern-line">
+              <div class="container">
+                <div class="row row-50">
+                  <div class="col-md-6 col-lg-4">
+                    <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">What We Offer</span></h5>
+                    <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
+                      <li><a href="#">Facebook Ads</a></li>
+                      <li><a href="#">PPC Services</a></li>
+                      <li><a href="#">Email Marketing</a></li>
+                      <li><a href="#">SEO Services</a></li>
+                      <li><a href="#">Lead Generation</a></li>
+                      <li><a href="#">Marketing Strategy</a></li>
+                    </ul>
+                  </div>
+                  <div class="col-md-6 col-lg-4 col-xl-3">
+                    <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Quick Links</span></h5>
+                    <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
+                      <li><a href="#">About us</a></li>
+                      <li><a href="#">Latest News</a></li>
+                      <li><a href="#">Our Projects</a></li>
+                      <li><a href="#">FAQ</a></li>
+                      <li><a href="#">Careers</a></li>
+                      <li><a href="#">Contact Us</a></li>
+                    </ul>
+                  </div>
+                  <div class="col-lg-4 col-xl-5">
+                    <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Newsletter</span></h5>
+                    <p class="wow fadeInRight">Sign up today for the latest news and tips</p>
+                    <!-- RD Mailform-->
+                    <form class="rd-form rd-mailform rd-form-inline rd-form-inline-sm oh-desktop" data-form-output="form-output-global" data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
+                      <div class="form-wrap wow slideInUp">
+                        <input class="form-input" id="subscribe-form-2-email" type="email" name="email" data-constraints="@Email @Required"/>
+                        <label class="form-label" for="subscribe-form-2-email">Enter your E-mail</label>
+                      </div>
+                      <div class="form-button form-button-2 wow slideInRight">
+                        <button class="button button-sm button-icon-3 button-primary-gradient" type="submit"><span class="d-none d-xl-inline-block">Subscribe</span><span class="icon mdi mdi-telegram d-xl-none"></span></button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="footer-modern-line-2">
+              <div class="container">
+                <div class="row row-30 align-items-center">
+                  <div class="col-sm-6 col-md-7 col-lg-4 col-xl-4">
+                    <div class="row row-30 align-items-center text-lg-center">
+                      <div class="col-md-7 col-xl-6"><a class="brand" href="index.html"><img src="images/logo-inverse-141x31.png" alt="" width="141" height="31"/></a></div>
+                      <div class="col-md-5 col-xl-6">
+                        <div class="text-white">More stuff here</div>
+                      </div>
+                    </div>
+                  </div>
+       
+                  </div>
+                </div>
+              </div>
+            </div>
+           
+          </footer>
+        </div>
     </div>
     <script src="https://kit.fontawesome.com/b4f9c2bf89.js"></script>
     <script src="./node_modules/jquery/dist/jquery.slim.js"></script>
