--- a/index.html
+++ b/index.html
@@ -330,12 +330,12 @@
             </section>    
 
              <!-- Page Footer-->
-      <footer class="section footer-modern context-dark footer-modern-2">
+      <footer class="section footer-modern context-dark footer-modern-2" style="background-color: #212529; margin-left: -15px; margin-right: -15px;">
             <div class="footer-modern-line">
               <div class="container">
                 <div class="row row-50">
                   <div class="col-md-6 col-lg-4">
-                    <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">What We Offer</span></h5>
+                    <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft text-white">What We Offer</span></h5>
                     <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
                       <li><a href="#">Facebook Ads</a></li>
                       <li><a href="#">PPC Services</a></li>
@@ -346,7 +346,7 @@
                     </ul>
                   </div>
                   <div class="col-md-6 col-lg-4 col-xl-3">
-                    <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Quick Links</span></h5>
+                    <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft text-white">Quick Links</span></h5>
                     <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
                       <li><a href="#">About us</a></li>
                       <li><a href="#">Latest News</a></li>
@@ -357,16 +357,16 @@
                     </ul>
                   </div>
                   <div class="col-lg-4 col-xl-5">
-                    <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Newsletter</span></h5>
-                    <p class="wow fadeInRight">Sign up today for the latest news and tips</p>
+                    <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft text-white">Newsletter</span></h5>
+                    <p class="wow fadeInRight text-white">Sign up today for the latest news and tips</p>
                     <!-- RD Mailform-->
                     <form class="rd-form rd-mailform rd-form-inline rd-form-inline-sm oh-desktop" data-form-output="form-output-global" data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
                       <div class="form-wrap wow slideInUp">
                         <input class="form-input" id="subscribe-form-2-email" type="email" name="email" data-constraints="@Email @Required"/>
-                        <label class="form-label" for="subscribe-form-2-email">Enter your E-mail</label>
+                        <label class="form-label" for="subscribe-form-2-email" style="color: white">Enter your E-mail</label>
                       </div>
                       <div class="form-button form-button-2 wow slideInRight">
-                        <button class="button button-sm button-icon-3 button-primary-gradient" type="submit"><span class="d-none d-xl-inline-block">Subscribe</span><span class="icon mdi mdi-telegram d-xl-none"></span></button>
+                        <button class="btn btn-primary btn-lg" type="submit"><span class="d-none d-xl-inline-block">Subscribe</span><span class="icon mdi mdi-telegram d-xl-none"></span></button>
                       </div>
                     </form>
                   </div>
