--- a/index.html
+++ b/index.html
@@ -164,19 +164,19 @@
                 <h1 class="display-4">Associations</h1>
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg col-4 assoc-logo">
+                        <div class="col-lg col-md-4 col-6 assoc-logo">
                             <img src="/css/media/placeholder.com-logo4.jpg" alt="">
                         </div>
-                        <div class="col-lg col-4 assoc-logo">
+                        <div class="col-lg col-md-4 col-6 assoc-logo">
                             <img src="/css/media/placeholder.com-logo4.jpg" alt="">
                         </div>
-                        <div class="col-lg col-4 assoc-logo">
+                        <div class="col-lg col-md-4 col-6 assoc-logo">
                             <img src="/css/media/placeholder.com-logo4.jpg" alt="">
                         </div>
-                        <div class="col-lg col-4 assoc-logo">
+                        <div class="col-lg col-md-4 col-6 assoc-logo">
                             <img src="/css/media/placeholder.com-logo4.jpg" alt="">
                         </div>
-                        <div class="col-lg col-4 assoc-logo">
+                        <div class="col-lg col-md-4 col-6 assoc-logo">
                             <img src="/css/media/placeholder.com-logo4.jpg" alt="">
                         </div>
                     </div>
@@ -336,7 +336,7 @@
                 <div class="row row-50">
                   <div class="col-md-6 col-lg-4">
                     <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft text-white">What We Offer</span></h5>
-                    <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
+                    <ul class="footer-modern-list pb-3">
                       <li><a href="#">Facebook Ads</a></li>
                       <li><a href="#">PPC Services</a></li>
                       <li><a href="#">Email Marketing</a></li>
@@ -345,9 +345,9 @@
                       <li><a href="#">Marketing Strategy</a></li>
                     </ul>
                   </div>
-                  <div class="col-md-6 col-lg-4 col-xl-3">
-                    <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft text-white">Quick Links</span></h5>
-                    <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
+                  <div class="col-md-6 col-lg-4 col-xl-3 pt-6">
+                    <h5 class="footer-modern-title"><span class="text-white">Quick Links</span></h5>
+                    <ul class="footer-modern-list pb-3">
                       <li><a href="#">About us</a></li>
                       <li><a href="#">Latest News</a></li>
                       <li><a href="#">Our Projects</a></li>
@@ -356,19 +356,20 @@
                       <li><a href="#">Contact Us</a></li>
                     </ul>
                   </div>
-                  <div class="col-lg-4 col-xl-5">
-                    <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft text-white">Newsletter</span></h5>
-                    <p class="wow fadeInRight text-white">Sign up today for the latest news and tips</p>
+                  <div class="col-lg-4 col-xl-5 pt-6">
+                    <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft text-white">Contact</span></h5>
                     <!-- RD Mailform-->
-                    <form class="rd-form rd-mailform rd-form-inline rd-form-inline-sm oh-desktop" data-form-output="form-output-global" data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
-                      <div class="form-wrap wow slideInUp">
-                        <input class="form-input" id="subscribe-form-2-email" type="email" name="email" data-constraints="@Email @Required"/>
-                        <label class="form-label" for="subscribe-form-2-email" style="color: white">Enter your E-mail</label>
-                      </div>
-                      <div class="form-button form-button-2 wow slideInRight">
-                        <button class="btn btn-primary btn-lg" type="submit"><span class="d-none d-xl-inline-block">Subscribe</span><span class="icon mdi mdi-telegram d-xl-none"></span></button>
-                      </div>
-                    </form>
+                    <form>
+                            <div class="form-group">
+                              <label for="exampleInputEmail1">Email address</label>
+                              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                            </div>
+                            <div class="form-group">
+                                    <label for="exampleFormControlTextarea1">Example textarea</label>
+                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                  </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                          </form>
                   </div>
                 </div>
               </div>
