--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg col-md-4 col-6 assoc-logo">
-                            <img src="/css/media/placeholder.com-logo4.jpg" alt="">
+                            <img src="http://lorempixel.com/270/270/business" alt="">
                         </div>
                         <div class="col-lg col-md-4 col-6 assoc-logo">
                             <img src="/css/media/placeholder.com-logo4.jpg" alt="">
