--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                             <img src="http://lorempixel.com/270/270/business" alt="">
                         </div>
                         <div class="col-lg col-md-4 col-6 assoc-logo">
-                            <img src="/css/media/placeholder.com-logo4.jpg" alt="">
+                            <img src="http://lorempixel.com/g/270/270/abstract" alt="">
                         </div>
                         <div class="col-lg col-md-4 col-6 assoc-logo">
                             <img src="/css/media/placeholder.com-logo4.jpg" alt="">
