--- a/index.html
+++ b/index.html
@@ -165,19 +165,19 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg col-md-4 col-6 assoc-logo">
-                            <img src="http://lorempixel.com/270/270/business" alt="">
+                            <img src="https://placehold.it/200x200/ffffff/000000?text=Logo%20Here" alt="">
                         </div>
                         <div class="col-lg col-md-4 col-6 assoc-logo">
-                            <img src="http://lorempixel.com/g/270/270/abstract" alt="">
+                            <img src="https://placehold.it/200x200/ffffff/000000?text=Logo%20Here" alt="">
                         </div>
                         <div class="col-lg col-md-4 col-6 assoc-logo">
-                            <img src="/css/media/placeholder.com-logo4.jpg" alt="">
+                            <img src="https://placehold.it/200x200/ffffff/000000?text=Logo%20Here" alt="">
                         </div>
                         <div class="col-lg col-md-4 col-6 assoc-logo">
-                            <img src="/css/media/placeholder.com-logo4.jpg" alt="">
+                            <img src="https://placehold.it/200x200/ffffff/000000?text=Logo%20Here" alt="">
                         </div>
                         <div class="col-lg col-md-4 col-6 assoc-logo">
-                            <img src="/css/media/placeholder.com-logo4.jpg" alt="">
+                            <img src="https://placehold.it/200x200/ffffff/000000?text=Logo%20Here" alt="">
                         </div>
                     </div>
                 </div>  
