--- a/index.html
+++ b/index.html
@@ -337,12 +337,12 @@
                   <div class="col-md-6 col-lg-4">
                     <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft text-white">What We Offer</span></h5>
                     <ul class="footer-modern-list pb-3">
-                      <li><a href="#">Facebook Ads</a></li>
-                      <li><a href="#">PPC Services</a></li>
-                      <li><a href="#">Email Marketing</a></li>
-                      <li><a href="#">SEO Services</a></li>
-                      <li><a href="#">Lead Generation</a></li>
-                      <li><a href="#">Marketing Strategy</a></li>
+                      <li><a href="#">This Thing</a></li>
+                      <li><a href="#">That Thing</a></li>
+                      <li><a href="#">The Other Thing</a></li>
+                      <li><a href="#">Whole Kit and Kaboodle</a></li>
+                      <li><a href="#">Kitchen Sink</a></li>
+                      <li><a href="#">Everlasting Gobstoppers</a></li>
                     </ul>
                   </div>
                   <div class="col-md-6 col-lg-4 col-xl-3 pt-6">
