--- a/index.html
+++ b/index.html
@@ -353,11 +353,10 @@
                       <li><a href="#">Our Projects</a></li>
                       <li><a href="#">FAQ</a></li>
                       <li><a href="#">Careers</a></li>
-                      <li><a href="#">Contact Us</a></li>
                     </ul>
                   </div>
                   <div class="col-lg-4 col-xl-5 pt-6">
-                    <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft text-white">Contact</span></h5>
+                    <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft text-white">Contact Us</span></h5>
                     <!-- RD Mailform-->
                     <form>
                             <div class="form-group">
