--- a/index.html
+++ b/index.html
@@ -69,8 +69,12 @@
                                     <div class="card bg-dark text-white align-middle">
                                             <img src="https://placehold.it/1000x400/333333" class="card-img" alt="...">
                                             <div class="card-img-overlay">
-                                              <h2 class="display-4 card-title text-white">Aute ea esse aliquip aliqua incididunt consequat.</h2>
-                                              <p class="card-text">Duis sunt quis culpa aliquip eu qui ut excepteur nisi in officia enim. Consequat veniam eu minim laborum excepteur occaecat aute reprehenderit proident anim aliquip dolore eiusmod tempor.</p>
+                                              <h2 class="display-4 card-title text-white">
+                                                Aute ea esse aliquip aliqua incididunt consequat.
+                                              </h2>
+                                              <p class="card-text">
+                                                Duis sunt quis culpa aliquip eu qui ut excepteur nisi in officia enim. Consequat veniam eu minim laborum excepteur occaecat aute reprehenderit proident anim aliquip dolore eiusmod tempor.
+                                              </p>
                                               <p class="card-text"><a href="#" class="btn btn-primary btn-lg">Link 1</a></p>
                                             </div>
                                     </div>
@@ -79,8 +83,12 @@
                                             <div class="card bg-dark text-white">
                                                     <img src="https://placehold.it/1000x400/666666" class="card-img" alt="...">
                                                     <div class="card-img-overlay align-middle">
-                                                      <h2 class="display-4 card-title text-white">Officia esse excepteur enim id Lorem do eiusmod et.</h2>
-                                                      <p class="card-text">Adipisicing fugiat anim non occaecat do pariatur non consectetur laboris exercitation aliqua. Aute sint ut ex duis proident.</p>
+                                                      <h2 class="display-4 card-title text-white">
+                                                        Officia esse excepteur enim id Lorem do eiusmod et.
+                                                      </h2>
+                                                      <p class="card-text">
+                                                        Adipisicing fugiat anim non occaecat do pariatur non consectetur laboris exercitation aliqua. Aute sint ut ex duis proident.
+                                                      </p>
                                                       <p class="card-text"><a href="#" class="btn btn-primary btn-lg">Link 2</a></p>
                                                     </div>
                                             </div>
@@ -89,8 +97,12 @@
                                     <div class="card bg-dark text-white">
                                             <img src="https://placehold.it/1000x400/000000" class="card-img" alt="...">
                                             <div class="card-img-overlay">
-                                              <h5 class="display-4 card-title text-white">Ut amet Lorem aliquip tempor.</h5>
-                                              <p class="card-text">Aliquip fugiat mollit reprehenderit excepteur ullamco. Lorem exercitation proident Lorem enim officia quis sit exercitation.</p>
+                                              <h5 class="display-4 card-title text-white">
+                                                Ut amet Lorem aliquip tempor.
+                                              </h5>
+                                              <p class="card-text">
+                                                Aliquip fugiat mollit reprehenderit excepteur ullamco. Lorem exercitation proident Lorem enim officia quis sit exercitation.
+                                              </p>
                                               <p class="card-text"><a href="#" class="btn btn-primary btn-lg">Link 3</a></p>
                                             </div>
                                     </div>
