--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://dewofyouryouth.github.io/doyy.png"
+    />
 </head>
 <body>
 
